# sterbling-ai-bias-bounty

./: AzuriteConfig  Makefile  README.md  __azurite_db_table__.json  environment.yml  loan_model.py  pyproject.toml  pytest.ini  setup_data.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: all_models.pkl  model.pkl  model_metadata.json  scaler.pkl
notebooks/: Loans Approval_AI Bias Hackathon-checkpoint-google-collab.ipynb  Loans Approval_AI Bias Hackathon.ipynb
notebooks/script/: Loans Approval_AI Bias Hackathon.py
sterbling_ai_bias_bounty/: __init__.py  dataset.py  features.py  plots.py
sterbling_ai_bias_bounty/modeling/: predict.py  train.py
tests/: __init__.py  conftest.py  test_data.py  test_dataset.py  test_features.py  test_loan_model.py  test_plots.py  test_predict.py  test_train.py
