[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sterbling_ai_bias_bounty"
version = "0.0.1"
description = "A classification model to detect and explain unusual patterns in AI decision-making for mortgage loan approvals"
authors = [
  { name = "sterbling" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "typer>=0.9.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "shap>=0.42.0",
    "lime>=0.2.0",
]


[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]


[tool.ruff]
line-length = 99
src = ["sterbling_ai_bias_bounty"]
include = ["pyproject.toml", "sterbling_ai_bias_bounty/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sterbling_ai_bias_bounty"]
force-sort-within-sections = true


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
